--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>My GitHub Page</title>
   </head>
   <body>
-    <h1>Hello from GitHub Pages 👋</h1>
-    <p>This is a simple static HTML site.</p>
+    <h1>This is a homepage</h1>
   </body>
 </html>
