--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>My GitHub Page</title>
+    <title>Homepage</title>
   </head>
   <body>
-    <h1>This is a homepage</h1>
+    <h1>This is the homepage</h1>
   </body>
 </html>
